crates/kirin-derive-core/src/field/tests/snapshots/kirin_derive_core__field__tests__test_struct_mut__regular-2.snap
---
source: crates/kirin-derive-core/src/field/tests/test_struct_mut.rs
expression: generate(input)
---
impl<'a, T> ::kirin::ir::HasArgumentsMut<'a> for TestStruct<T> {
    type Iter = std::iter::Chain<
        std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
        std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
    >;
    fn arguments_mut(&'a mut self) -> Self::Iter {
        let Self { a, b, .. } = self;
        std::iter::once(a).chain(std::iter::once(b))
    }
}
