crates/kirin-derive-core/src/field/tests/snapshots/kirin_derive_core__field__tests__test_struct_mut__unit_struct.snap
---
source: crates/kirin-derive-core/src/field/tests/test_struct_mut.rs
expression: generate(input)
---
impl<'a> ::kirin::ir::HasArgumentsMut<'a> for TestStruct {
    type Iter = std::iter::Empty<&'a mut ::kirin::ir::SSAValue>;
    fn arguments_mut(&'a mut self) -> Self::Iter {
        std::iter::empty::<&'a mut ::kirin::ir::SSAValue>()
    }
}
