crates/kirin-derive-core/src/field/tests/snapshots/kirin_derive_core__field__tests__test_struct_mut__unnamed_struct_regular.snap
---
source: crates/kirin-derive-core/src/field/tests/test_struct_mut.rs
expression: generate(input)
---
impl<'a> ::kirin::ir::HasArgumentsMut<'a> for TestStruct {
    type Iter = std::iter::Chain<
        std::iter::Chain<
            std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
            std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
        >,
        std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
    >;
    fn arguments_mut(&'a mut self) -> Self::Iter {
        let Self(field_0, field_1, field_2, ..) = self;
        std::iter::once(field_0)
            .chain(std::iter::once(field_1))
            .chain(std::iter::once(field_2))
    }
}
