crates/kirin-derive-core/src/field/tests/snapshots/kirin_derive_core__field__tests__test_struct_mut__unnamed_struct_wrapper.snap
---
source: crates/kirin-derive-core/src/field/tests/test_struct_mut.rs
expression: generate(input)
---
impl<'a, T> ::kirin::ir::HasArgumentsMut<'a> for TestStruct<T> {
    type Iter = <T as ::kirin::ir::HasArgumentsMut>::Iter;
    fn arguments_mut(&'a mut self) -> Self::Iter {
        let Self(field_0, field_1, ..) = self;
        <T as ::kirin::ir::HasArgumentsMut>::arguments_mut(field_1)
    }
}
